--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>gratflix</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="position: relative;"></div>
   </body>
 </html>
