--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     <title>gratflix</title>
   </head>
   <body>
-    <div id="root" style="position: relative;"></div>
+    <div id="root"></div>
   </body>
 </html>
